# raytracer

./: CMakeLists.txt
doc/: .gitignore  01-introduction.tex  02-theory.tex  03-methodology.tex  04-implementation.tex  05-results.tex  06-conclusions.tex  main.tex  sources.bib  titlepage.tex
include/: box.hpp  camera.hpp  color.hpp  image.hpp  material.hpp  math.hpp  ray.hpp  sphere.hpp  vec3.hpp  world.hpp
src/: camera.cpp  image.cpp  main.cpp  material.cpp  math.cpp  ray.cpp  vec3.cpp  world.cpp
